hphp/test/slow/reified_generics/error-class-creation-2.php.expectf
Fatal error: Class C requires 2 generics but 1 given in %s on line 5
